--- a/en.yml
+++ b/en.yml
@@ -93,6 +93,9 @@ en:
       *🌎 Choose your language:*
     en: 🇬🇧 English
     ru: 🇷🇺 Русский
+    tr: 🇹🇷 Türkiye 
+    zh: 🇨🇳 中文
+    fa: 🇮🇷 فارسی
   # --------------------------------------------------------
   lang_custom:
     text: |
