--- a/ru.yml
+++ b/ru.yml
@@ -93,6 +93,9 @@ ru:
       *🌎 Выберите язык:*
     en: 🇬🇧 English
     ru: 🇷🇺 Русский
+    tr: 🇹🇷 Türkiye 
+    zh: 🇨🇳 中文
+    fa: 🇮🇷 فارسی
   # --------------------------------------------------------
   lang_custom:
     text: |
