--- a/fa.yml
+++ b/fa.yml
@@ -53,7 +53,7 @@ fa:
       *اشتراک شما:*
 
       تا تاریخ: *%<exp>s* %<ico>s (%<days>s روز)
-      با پرداخت موافقت می‌کنید با [شرایط سرویس](https://kebabvpn.com/terms-and-conditions). لطفاً با دقت مطالعه کنید، مبالغ پرداختی قابل استرداد نمی‌باشند.
+      با پرداخت موافقت می‌کنید با [شرایط سرویس](https://kebabvpn.com/terms-and-conditions).
   # --------------------------------------------------------
   sub_crypto:
     text: |
