--- a/ru.yml
+++ b/ru.yml
@@ -53,7 +53,7 @@ ru:
       *Ваша подписка:*
 
       Активна до: *%<exp>s* %<ico>s (%<days>s дней)
-      Совершая платеж, вы соглашаетесь с [правилами сервиса](https://kebabvpn.com/terms-and-conditions). Пожалуйста, прочитайте внимательно, возврат средств не предусмотрен.
+      Совершая платеж, вы соглашаетесь с [правилами сервиса](https://kebabvpn.com/terms-and-conditions).
   # --------------------------------------------------------
   sub_crypto:
     text: |
