--- a/fa.yml
+++ b/fa.yml
@@ -25,7 +25,7 @@ fa:
 
       ℹ️ /help - راهنما
 
-      🤖 @KebabVPNSupport - پشتیبانی
+      🤖 @KebabSupport - پشتیبانی
   # --------------------------------------------------------
   start:
     text: |
@@ -37,7 +37,7 @@ fa:
     text: |
       🌟 *تبریک!* 🌟
 
-      شما *%<days>s* روز از استفاده از VPN به دست آوردید! تجربه‌تان را با @KebabVPNSupport به اشتراک بگذارید! 🫶
+      شما *%<days>s* روز از استفاده از VPN به دست آوردید! تجربه‌تان را با @KebabSupport به اشتراک بگذارید! 🫶
 
       اشتراک شما تا تاریخ *%<exp>s* فعال است.
   # --------------------------------------------------------
@@ -64,7 +64,7 @@ fa:
 
       مقادیر پرداخت USDT بر اساس دلار محاسبه می‌شوند. به عنوان مثال، برای پرداخت به مدت 12 ماه، فقط کافیست `49.99` USDT ارسال کنید. می‌توانید مقدار دلخواهی ارسال کنید و مدت اشتراک شما به نسبت هزینه آن محاسبه می‌شود.
 
-      برای تایید پرداخت، نیاز به *20 تایید* تراکنش دارید که ممکن است کمی زمان ببرد. بعد از تایید تراکنش، اطلاعاتی دریافت خواهید کرد. اگر تراکنش شما پس از 10 دقیقه منتظره هنوز تایید نشده باشد، لطفاً با @KebabVPNSupport تماس بگیرید.
+      برای تایید پرداخت، نیاز به *20 تایید* تراکنش دارید که ممکن است کمی زمان ببرد. بعد از تایید تراکنش، اطلاعاتی دریافت خواهید کرد. اگر تراکنش شما پس از 10 دقیقه منتظره هنوز تایید نشده باشد، لطفاً با @KebabSupport تماس بگیرید.
   # --------------------------------------------------------
   config:
     text: |
