--- a/zh.yml
+++ b/zh.yml
@@ -25,7 +25,7 @@ zh:
 
       ℹ️ /help - 帮助
 
-      🤖 @KebabVPNSupport - 支持
+      🤖 @KebabSupport - 支持
   # --------------------------------------------------------
   start:
     text: |
@@ -37,7 +37,7 @@ zh:
     text: |
       🌟 *祝贺!* 🌟
 
-      您获得 *%<days>s* 天的VPN使用权！请与 @KebabVPNSupport 分享您的体验！🫶
+      您获得 *%<days>s* 天的VPN使用权！请与 @KebabSupport 分享您的体验！🫶
 
       您的订阅有效期至: *%<exp>s*
   # --------------------------------------------------------
@@ -64,7 +64,7 @@ zh:
 
       使用USDT支付的金额将根据美元进行计算。例如，只需发送 `49.99` USDT 即可支付12个月的费用。您可以发送任意金额，您的订阅期限将根据费用的比例自动计算。
 
-      为了确认您的支付，需要等待 *20个确认* 以确保交易完成。请稍等片刻。一旦交易被确认，您将收到通知。如果在等待10分钟后您的交易仍未得到确认，请与 @KebabVPNSupport 联系。
+      为了确认您的支付，需要等待 *20个确认* 以确保交易完成。请稍等片刻。一旦交易被确认，您将收到通知。如果在等待10分钟后您的交易仍未得到确认，请与 @KebabSupport 联系。
   # --------------------------------------------------------
   config:
     text: |
