--- a/ru.yml
+++ b/ru.yml
@@ -25,7 +25,7 @@ ru:
 
       ℹ️ /help - Помощь
 
-      🤖 @KebabVPNSupport - Поддержка
+      🤖 @KebabSupport - Поддержка
   # --------------------------------------------------------
   start:
     text: |
@@ -37,7 +37,7 @@ ru:
     text: |
       🌟 *Поздравляем!* 🌟
 
-      Вы получили *%<days>s* дней пользования VPN! Пожалуйста, поделитесь своим опытом в @KebabVPNSupport! 🫶
+      Вы получили *%<days>s* дней пользования VPN! Пожалуйста, поделитесь своим опытом в @KebabSupport! 🫶
 
       Ваша подписка активна до: *%<exp>s*
   # --------------------------------------------------------
@@ -64,7 +64,7 @@ ru:
 
       USDT пополнения рассчитываются как USD, согласно тарифам. Например, чтобы заплатить за 12 месяцев, просто переведите `49.99` USDT. Вы можете перевести любую сумму, срок окончания вашей подписки будет рассчитан автоматически согласно пропорции к стоимости тарифа.
 
-      Для зачисления средств необходимо, чтобы ваша транзакция набрала *20 подтверждений*, поэтому, необходимо немного подождать. Как только транзакция будет обработана, вы получите уведомление. Если ваша транзакция не обработана после 10 минут ожидания, пожалуйста, напишите нам в @KebabVPNSupport.
+      Для зачисления средств необходимо, чтобы ваша транзакция набрала *20 подтверждений*, поэтому, необходимо немного подождать. Как только транзакция будет обработана, вы получите уведомление. Если ваша транзакция не обработана после 10 минут ожидания, пожалуйста, напишите нам в @KebabSupport.
   # --------------------------------------------------------
   config:
     text: |
