--- a/fa.yml
+++ b/fa.yml
@@ -10,6 +10,9 @@ fa:
     lang_custom: 🔧 زبان جدید
     help: ℹ️ راهنما
     delete_message: 🥷 حذف پیام
+    settings: 🔧 تنظیمات
+    settings_notifications_enable: 🔕 اعلان ها را فعال کنید
+    settings_notifications_disable: 🔔 غیر فعال کردن اعلانها
   # --------------------------------------------------------
   help:
     text: |
@@ -22,6 +25,8 @@ fa:
       💸 /subscription - اشتراک
 
       🌎 /lang - زبان
+
+      🔧 /settings - تنظیمات را مدیریت کنید
 
       ℹ️ /help - راهنما
 
@@ -100,6 +105,10 @@ fa:
       *🔧 زبان جدید*
 
       شما می‌توانید زبان جدیدی را به ربات اضافه کنید، برای این کار کافیست یک فایل مناسب در مخزن ما ایجاد کنید. لطفاً دستورالعمل‌ها را دنبال کنید: https://github.com/KebabVPN/i18n
+  # --------------------------------------------------------
+  settings:
+    text: |
+      *🔧 تنظیمات*
   # --------------------------------------------------------
   unknown:
     text: |
