--- a/ru.yml
+++ b/ru.yml
@@ -10,6 +10,9 @@ ru:
     lang_custom: 🔧 Новый язык
     help: ℹ️ Помощь
     delete_message: 🥷 Удалить сообщение
+    settings: 🔧 Настройки
+    settings_notifications_enable: 🔕 Включить уведомления
+    settings_notifications_disable: 🔔 Выключить уведомления
   # --------------------------------------------------------
   help:
     text: |
@@ -22,6 +25,8 @@ ru:
       💸 /subscription - Подписка
 
       🌎 /lang - Язык
+
+      🔧 /settings - Настройки
 
       ℹ️ /help - Помощь
 
@@ -100,6 +105,10 @@ ru:
       *🔧 Новый язык*
 
       Вы можете добавить новый язык в наш бот, создав соответствующий файл, в нашем репозитории. Пожалуйста, следуйте инструкциям по ссылке https://github.com/KebabVPN/i18n
+  # --------------------------------------------------------
+  settings:
+    text: |
+      *🔧 Настройки*
   # --------------------------------------------------------
   unknown:
     text: |
