--- a/zh.yml
+++ b/zh.yml
@@ -10,6 +10,9 @@ zh:
     lang_custom: 🔧 新语言
     help: ℹ️ 帮助
     delete_message: 🥷 删除消息
+    settings: 🔧 设置
+    settings_notifications_enable: 🔕 启用通知
+    settings_notifications_disable: 🔔 禁用通知
   # --------------------------------------------------------
   help:
     text: |
@@ -22,6 +25,8 @@ zh:
       💸 /subscription - 订阅
 
       🌎 /lang - 语言
+
+      🔧 /settings - 管理设置
 
       ℹ️ /help - 帮助
 
@@ -100,6 +105,10 @@ zh:
       *🔧 新语言*
 
       您可以向我们的机器人添加新的语言，只需在我们的存储库中创建相应的文件即可。请按照以下链接的说明进行操作：https://github.com/KebabVPN/i18n
+  # --------------------------------------------------------
+  settings:
+    text: |
+      *🔧 设置*
   # --------------------------------------------------------
   unknown:
     text: |
