--- a/fa.yml
+++ b/fa.yml
@@ -51,9 +51,9 @@ fa:
     ico_no: ❌
     menu:
       crypto: 🤑 پرداخت با USDT (TRC-20, مبلغ دلخواه)
-      fiat_1_mo: 💵 1 ماه - 4.99 دلار
-      fiat_12_mo: 💵 12 ماه - 49.99 دلار (تخفیف 20%)
-      fiat_36_mo: 💵 36 ماه - 89.99 دلار (تخفیف 50%)
+      sub_1_mo: 💵 1 ماه - 4.99 دلار
+      sub_12_mo: 💵 12 ماه - 49.99 دلار (تخفیف 20%)
+      sub_36_mo: 💵 36 ماه - 89.99 دلار (تخفیف 50%)
     text: |
       *اشتراک شما:*
 
