--- a/ru.yml
+++ b/ru.yml
@@ -51,9 +51,9 @@ ru:
     ico_no: ❌
     menu:
       crypto: 🤑 Оплатить USDT (TRC-20, любая сумма)
-      fiat_1_mo: 💵 1 мес. - 4.99 USD
-      fiat_12_mo: 💵 12 мес. - 49.99 USD (20% скидка)
-      fiat_36_mo: 💵 36 мес. - 89.99 USD (50% скидка)
+      sub_1_mo: 💵 1 мес. - 4.99 USD
+      sub_12_mo: 💵 12 мес. - 49.99 USD (20% скидка)
+      sub_36_mo: 💵 36 мес. - 89.99 USD (50% скидка)
     text: |
       *Ваша подписка:*
 
