--- a/tr.yml
+++ b/tr.yml
@@ -51,9 +51,9 @@ tr:
     ico_no: ❌
     menu:
       crypto: 🤑 USDT ile Öde (TRC-20, herhangi bir miktar)
-      fiat_1_mo: 💵 1 ay - 4.99 USD
-      fiat_12_mo: 💵 12 ay - 49.99 USD (%20 indirim)
-      fiat_36_mo: 💵 36 ay - 89.99 USD (%50 indirim)
+      sub_1_mo: 💵 1 ay - 4.99 USD
+      sub_12_mo: 💵 12 ay - 49.99 USD (%20 indirim)
+      sub_36_mo: 💵 36 ay - 89.99 USD (%50 indirim)
     text: |
       *Aboneliğiniz:*
 
