--- a/en.yml
+++ b/en.yml
@@ -51,9 +51,9 @@ en:
     ico_no: ❌
     menu:
       crypto: 🤑 Pay using USDT (TRC-20, any amount)
-      sub_1_mo: 💵 1 Month - 4.99 USD
-      sub_12_mo: 💵 12 Months - 49.99 USD (20% OFF)
-      sub_36_mo: 💵 36 Months - 89.99 USD (50% OFF)
+      plan_1_mo: 💵 1 Month - 4.99 USD
+      plan_12_mo: 💵 12 Months - 49.99 USD (20% OFF)
+      plan_36_mo: 💵 36 Months - 89.99 USD (50% OFF)
     text: |
       *Your subscription:*
 
