--- a/zh.yml
+++ b/zh.yml
@@ -51,9 +51,9 @@ zh:
     ico_no: ❌
     menu:
       crypto: 🤑 使用USDT支付 (TRC-20, 任意金额)
-      sub_1_mo: 💵 1个月 - 4.99美元
-      sub_12_mo: 💵 12个月 - 49.99美元（享受20%折扣）
-      sub_36_mo: 💵 36个月 - 89.99美元（享受50%折扣）
+      plan_1_mo: 💵 1个月 - 4.99美元
+      plan_12_mo: 💵 12个月 - 49.99美元（享受20%折扣）
+      plan_36_mo: 💵 36个月 - 89.99美元（享受50%折扣）
     text: |
       *您的订阅:*
 
