--- a/zh.yml
+++ b/zh.yml
@@ -60,6 +60,10 @@ zh:
       截止日期: *%<exp>s* %<ico>s (%<days>s 天)
       支付即代表您同意[服务条款](https://kebabvpn.com/terms-and-conditions)。
   # --------------------------------------------------------
+  plan_unknown:
+    text: |
+      Plan is disabled or unknown! Run /subscription command to get plans available for purchase.
+  # --------------------------------------------------------
   sub_crypto:
     text: |
       *用于支付的TRC-20地址*:
