--- a/fa.yml
+++ b/fa.yml
@@ -16,6 +16,7 @@ fa:
     settings_notifications_enable: 🔕 اعلان ها را فعال کنید
     settings_notifications_disable: 🔔 غیر فعال کردن اعلانها
     subscription_management_stripe: 💸 اشتراک (Stripe)
+    referral: 💰 Referral
   # --------------------------------------------------------
   help:
     text: |
@@ -126,6 +127,20 @@ fa:
       *🔧 زبان جدید*
 
       شما می‌توانید زبان جدیدی را به ربات اضافه کنید، برای این کار کافیست یک فایل مناسب در مخزن ما ایجاد کنید. لطفاً دستورالعمل‌ها را دنبال کنید: https://github.com/KebabVPN/i18n
+  # --------------------------------------------------------
+  referral:
+    text: |
+      *💰 Referral*
+
+      Your personal invite link is: `%<link>s`
+      Click to copy and send to your friends!
+
+      Users invited: *%<users_invited_count>s*
+      Referral balance: *%<ref_balance_usd>s*
+      VPN time earn rate: *%<ref_time_percent>s*
+      Money earn rate: *%<ref_money_percent>s*
+
+      Contact @KebabSupport to provide your requisites for money withdrawal.
   # --------------------------------------------------------
   settings:
     text: |
