--- a/en.yml
+++ b/en.yml
@@ -62,7 +62,7 @@ en:
       *Your subscription:*
 
       Expiration date: *%<exp>s* %<ico>s (%<days>s active days)
-      By making a payment you agree with our [Terms and Conditions](https://kebabvpn.com/terms-and-conditions).
+      By making a payment you agree with our [Terms and Conditions](https://kebabvpn.com/terms).
   # --------------------------------------------------------
   payment_options:
     menu:
@@ -72,7 +72,7 @@ en:
       *Your subscription:*
 
       Expiration date: *%<exp>s* %<ico>s (%<days>s active days)
-      By making a payment you agree with our [Terms and Conditions](https://kebabvpn.com/terms-and-conditions).
+      By making a payment you agree with our [Terms and Conditions](https://kebabvpn.com/terms).
 
       You're buying: *%<description>s*
 
