--- a/fa.yml
+++ b/fa.yml
@@ -62,7 +62,7 @@ fa:
       *اشتراک شما:*
 
       تا تاریخ: *%<exp>s* %<ico>s (%<days>s روز)
-      با پرداخت موافقت می‌کنید با [شرایط سرویس](https://kebabvpn.com/terms-and-conditions).
+      با پرداخت موافقت می‌کنید با [شرایط سرویس](https://kebabvpn.com/terms).
   # --------------------------------------------------------
   payment_options:
     menu:
@@ -72,7 +72,7 @@ fa:
       *Your subscription:*
 
       Expiration date: *%<exp>s* %<ico>s (%<days>s active days)
-      By making a payment you agree with our [Terms and Conditions](https://kebabvpn.com/terms-and-conditions).
+      By making a payment you agree with our [Terms and Conditions](https://kebabvpn.com/terms).
 
       You're buying: *%<description>s*
 
