--- a/ru.yml
+++ b/ru.yml
@@ -62,7 +62,7 @@ ru:
       *Ваша подписка:*
 
       Активна до: *%<exp>s* %<ico>s (%<days>s дней)
-      Совершая платеж, вы соглашаетесь с [правилами сервиса](https://kebabvpn.com/terms-and-conditions).
+      Совершая платеж, вы соглашаетесь с [правилами сервиса](https://kebabvpn.com/terms).
   # --------------------------------------------------------
   payment_options:
     menu:
@@ -72,7 +72,7 @@ ru:
       *Your subscription:*
 
       Expiration date: *%<exp>s* %<ico>s (%<days>s active days)
-      By making a payment you agree with our [Terms and Conditions](https://kebabvpn.com/terms-and-conditions).
+      By making a payment you agree with our [Terms and Conditions](https://kebabvpn.com/terms).
 
       You're buying: *%<description>s*
 
