--- a/ru.yml
+++ b/ru.yml
@@ -50,6 +50,16 @@ ru:
 
       Ваша подписка активна до: *%<exp>s*
   # --------------------------------------------------------
+  sub_expired:
+    text: |
+      ❌ *Подписка истекла!* ❌
+
+      Мы с сожалением находим, что ваша подписка истекла *%<exp>s*
+
+      Вам надо воспользоваться командой /subscription чтобы продолжить пользование сервисом.
+
+      Не стесняйтесь писать нам @KebabSupport если у вас есть какие-либо вопросы! 🫶
+  # --------------------------------------------------------
   subscription:
     ico_yes: ✅
     ico_no: ❌
